# inferno

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  fly.toml
.github/workflows/: cargo-clippy.yml  cargo-test.yml  fly-deploy.yml  fly_deploy.yml  leptosfmt.yml
.helix/: languages.toml
end2end/: playwright.config.ts
end2end/tests/: general.spec.ts
js/: README.md  package-lock.json  package.json  rollup.config.js
js/src/: index.js  index.ts  theme.ts
migrations/: 20241206203906_init_database.sql  20241211030006_init_logins.sql  20250106220618_create_links_table.sql  20250110023919_create_universes.sql  20250110184109_remove_null_universe.sql  20250112015447_create_sessions.sql  20250112034405_add_dispose_column_to_sessions.sql  20250112034608_add_timestamps_to_sessions.sql  20251004003212_init_database.sql
src/: account.rs  app.rs  cli.rs  components.rs  crypto.rs  error.rs  html.rs  lib.rs  main.rs  passwords.rs  server.rs  slug.rs  state.rs  universe.rs
src/account/: claims.rs  login.rs  logout.rs  mod.rs  session.rs
src/markdown/: mod.rs
src/markdown/filters/: decorate_links.rs  mod.rs
src/markup/: html.rs  mod.rs
src/markup/filters/: mod.rs  shorten_wikitext.rs  tag_headings.rs
src/page/: edit.rs  editor.rs  mod.rs  render.rs
src/page/view/: html.rs  markdown.rs  mod.rs  render.rs
src/routes/: mod.rs  page.rs
src/routes/account/: login.rs  logout.rs  mod.rs
src/routes/page/: mod.rs  post.rs  show.rs
src/schema/: mod.rs  page.rs  session.rs  universe.rs  user.rs
src/user/: mod.rs
style/: main.scss  sidebar.scss
style/account/: login.scss
templates/: base.html  shell.html  show.html
templates/account/: login.html
templates/page/: 404.html  base.html  edit.html  not_found.html  show.html
web/: package-lock.json  package.json  rollup.config.js
web/src/: extensions.ts  index.ts  sidebar.ts  theme.ts
web/src/style/: enhancements.scss  main.scss
web/src/style/account/: login.scss
