[package]
name = "inferno"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
# Generic HTTP libraries
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
axum = { version = "0.8", features = ["macros", "original-uri"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
http = "1"

# HTML templating and rendering
askama = "0.12"
ammonia = "4"

# For config
figment = { version = "0.10.19", features = ["env", "toml"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
base16 = "0.2"
jsonwebtoken = "9"
cookie = "0.18"
chrono = "0.4"
eyre = "0.6"
color-eyre = "0.6"
sha2 = "0.10"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
diff-match-patch-rs = "0.3.2"
url-escape = "0.1"
url = "2"
regex = "1"

[dependencies.pulldown-cmark]
git = "https://github.com/pulldown-cmark/pulldown-cmark"
rev = "e9ce6defb44a1d4b121fb1ffa43da87f7c74541e"

[dependencies.pulldown-cmark-escape]
git = "https://github.com/pulldown-cmark/pulldown-cmark"
rev = "e9ce6defb44a1d4b121fb1ffa43da87f7c74541e"

[build-dependencies]
eyre = "0.6"
color-eyre = "0.6"
